2006-02-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-ui.xml: add placeholders in the File menu in case
	someone wants to give SaveCopy or New From Template a try.

2006-02-13  Steve Frécinaux  <steve@istique.net>

	* plugins/externaltools/tools/outputanel.py:
	* plugins/externaltools/tools/functions.py:
	
	replace blue status messages with italic/bold ones. Make some strings
	localizables. Revert the idle cursor on new documents when appropriated.

	* plugins/externaltools/tools/manager.py: reset accelerator entry when
	focus out and no accelerator was set.

2006-02-13  Paolo Borelli  <pborelli@katamail.com>

	* plugins/snippets/snippets.gedit-plugin.desktop.in: mark name for
	translation.

2006-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-tab.c: do not install autosave timeout when in CLOSING
	state. Fixes bug 330516.

2006-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: fix off by one bug in goto line.

2006-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-view.c: be robust to the case where the view is destroyed
	before the idle-scroll-to-line hack runs.
	* gedit/gedit-tab.c: check for NULLness before destroying a GTimer.

2006-02-12  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-utils.c (gedit_utils_make_valid_utf8): replace
	unknown characters by the Unicode replacement character
	instead of '?', and don't append "(invalid encoding)".

2006-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-view.c: use gtk_widget_get_clipboard instead of
	gtk_clipboard_get.

2006-02-12  Steve Frécinaux <steve@istique.net>

	* gedit/gedit-window.[ch]: handle the visibility changes of panels, 
	toolbar and statusbar connecting to the show and hide signals.

	* gedit/gedit-commands-view.c:
	* gedit/gedit-session.c:

	adapt for above changes (use directly gtk_widget_show/hide instead of a
	custom function)

2006-02-12  Paolo Maggi  <paolo@gnome.org>
