@@ -1,3 +1,8 @@
+2006-02-13  Steve Frécinaux  <steve@istique.net>
+
+	* plugins/externaltools/tools/capture.py: convert to unicode the
+	what we get from the pipe.
+
 2006-02-13  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-ui.xml: add placeholders in the File menu in case
